Update swagger
