# swagger/wine_classification_api.yaml
@@ -16,10 +16,10 @@ paths:
         '500':
           description: Service is unhealthy
 
-  /predict:
+  /predict_country_province_price_tasterName:
     post:
-      summary: Entrypoint to our prediction function
-      operationId: wine_classification_api.clf_predict
+      summary: predict quality by country, province,price and taster name
+      operationId: wine_classification_api.clf_predict1
       consumes:
       - multipart/form-data
       produces:
@@ -53,6 +53,96 @@ paths:
           description: The taster's name of the wine
           type: string
           enum: ["Roger Voss","Michael Schachner","Kerin O’Keefe","Virginie Boone","Paul Gregutt","Matt Kettmann","Joe Czerwinski","Sean P. Sullivan","Anna Lee C. Iijima","Jim Gordon","Anne Krebiehl MW","Lauren Buzzeo","Susan Kostrzewa","Mike DeSimone","Jeff Jenssen","Alexander Peartree","Carrie Dykes","Fiona Adams","Christina Pickard"]
+      responses:
+        '200':
+          description: Classification performed successfully
+        '500':
+          description: Unable to perform the Classification
+
+  /predict_country_description_price_tasterName:
+    post:
+      summary: predict quality by country, description,price and taster name
+      operationId: wine_classification_api.clf_predict2
+      consumes:
+      - multipart/form-data
+      produces:
+      - application/json
+      parameters:
+        - in: formData
+          name: model
+          required: true
+          description: The type of model
+          type: string
+          enum: ["RandomForestClassifier", "KNeighborsClassifier", "DecisionTreeClassifier","GaussianNB"]
+        - in: formData
+          name: country
+          required: true
+          description: The country of the wine
+          type: string
+          enum: ["Argentina","Armenia","Australia", "Austria", "Bosnia and Herzegovina ", "Brazil","Bulgaria","Canada","Chile","China","Croatia","Cyprus","Czech Republic","Egypt","France","Georgia","Germany","Greece","Hungary","India","Israel","Italy","Lebanon","Luxembourg","Macedonia","Mexico","Moldova","Morocco","New Zealand","Peru","Portugal","Romania","Serbia","Slovakia","Slovenia","South Africa","Spain","Switzerland","Turkey","US","Ukraine","Uruguay"]
+        - in: formData
+          name: price
+          required: true
+          description: The price of the wine
+          type: number
+        - in: formData
+          name: description
+          required: true
+          description: The description of the wine
+          type: string
+        - in: formData
+          name: taster_name
+          required: true
+          description: The taster's name of the wine
+          type: string
+          enum: ["Roger Voss","Michael Schachner","Kerin O’Keefe","Virginie Boone","Paul Gregutt","Matt Kettmann","Joe Czerwinski","Sean P. Sullivan","Anna Lee C. Iijima","Jim Gordon","Anne Krebiehl MW","Lauren Buzzeo","Susan Kostrzewa","Mike DeSimone","Jeff Jenssen","Alexander Peartree","Carrie Dykes","Fiona Adams","Christina Pickard"]
+      responses:
+        '200':
+          description: Classification performed successfully
+        '500':
+          description: Unable to perform the Classification
+
+  /predict_description:
+    post:
+      summary: predict quality by description
+      operationId: wine_classification_api.clf_predict3
+      consumes:
+      - multipart/form-data
+      produces:
+      - application/json
+      parameters:
+        - in: formData
+          name: description
+          required: true
+          description: The description of the wine
+          type: string
+      responses:
+        '200':
+          description: Classification performed successfully
+        '500':
+          description: Unable to perform the Classification
+
+  /predict_country_price:
+    post:
+      summary: predict quality by country and price
+      operationId: wine_classification_api.clf_predict4
+
+      consumes:
+      - multipart/form-data
+      produces:
+      - application/json
+      parameters:
+        - in: formData
+          name: country
+          required: true
+          description: The country of the wine
+          type: string
+          enum: ["Argentina","Armenia","Australia", "Austria", "Bosnia and Herzegovina ", "Brazil","Bulgaria","Canada","Chile","China","Croatia","Cyprus","Czech Republic","Egypt","France","Georgia","Germany","Greece","Hungary","India","Israel","Italy","Lebanon","Luxembourg","Macedonia","Mexico","Moldova","Morocco","New Zealand","Peru","Portugal","Romania","Serbia","Slovakia","Slovenia","South Africa","Spain","Switzerland","Turkey","US","Ukraine","Uruguay"]
+        - in: formData
+          name: price
+          required: true
+          description: The price of the wine
+          type: number
       responses:
         '200':
           description: Classification performed successfully
